Work on mobile issues

--- a/styles/2048.sass
+++ b/styles/2048.sass
@@ -88,3 +88,15 @@
         font-size: 12vw
     @media only screen and (min-width: 1100px)
         font-size: 9vw
+
+@media only screen and (max-width: 768px) and (min-width: 0px)
+    html
+        position: fixed
+        height: 100%
+        overflow: hidden
+    body
+        width: 100vw
+        height: 100vh
+        overflow-y: scroll
+        overflow-x: hidden
+        -webkit-overflow-scrolling: touch
